--- a/app/components/profile.component.html
+++ b/app/components/profile.component.html
@@ -1,3 +1,25 @@
 <div *ngIf="user">
-<h1>{{ user.name }}</h1>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">{{ user.name }}</h3>
+    </div>
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-md-4">
+          <img class="img-thumbnail" src="{{ user.avatar_url }}">
+          <a class="btn btn-default btn-block" href="{{user.html_url}}" target="_blank">View Profile</a>
+        </div>
+        <div class="col-md-6">
+          <div class="stats">
+            <span class="label label-default">{{user.public_repos}} Public Repors</span>
+            <span class="label label-primary">{{user.public_gists}} Public Gists</span>
+            <span class="label label-success">{{user.followers}} Followers</span>
+            <span class="label label-info">{{user.following}} Following</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 </div>
