added form module

--- a/app/components/profile.component.html
+++ b/app/components/profile.component.html
@@ -1,3 +1,13 @@
+<div class="row">
+  <div class="col-md-12">
+    <form class="well">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Enter GitHub Username" [(ngModel)]="username" name="username" (keyup)="searchUser()">
+      </div>
+    </form>
+  </div>
+</div>
+
 <div *ngIf="user">
   <!-- user info panel -->
   <div class="panel panel-default">
@@ -27,7 +37,17 @@
     </div>
     <div class="panel-body">
       <div *ngFor="let repo of repos">
-        {{repo.name}}
+        <div class="row">
+          <div class="col-md-9">
+            <h4><a href="{{repo.html_url}}" target="_blank">{{repo.name}}</a></h4>
+            <p>{{repo.description}}</p>
+          </div>
+          <div class="col-md-3">
+            <span class="label label-default">{{repo.watchers}} Watchers</span>
+            <span class="label label-primary">{{repo.forks}} Forks</span>
+          </div>
+        </div>
+        <hr>
       </div>
           
     
