--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
+body {
+  margin-top: 30px;
+}
+
 .container {
   max-width: 1200px;
   min-width: 320px;
+}
+
+.btn-success {
+  width: 120px;
+  margin-left: 5px;
 }
