--- a/app/components/profile.component.html
+++ b/app/components/profile.component.html
@@ -1,60 +1,58 @@
 <div class="row">
-  <div class="col-md-12">
-    <form class="well">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Enter GitHub Username" [(ngModel)]="username" name="username" (keyup)="searchUser()">
+  <div class="col-md-12 well">
+    <form>
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Enter GitHub Username" [(ngModel)]="username" name="username" (keyup)="searchUser()">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <label class="checkbox-inline">
+          <input type="checkbox" data-toggle="toggle"> Location
+        </label>
+        <label class="checkbox-inline">
+          <input type="checkbox" data-toggle="toggle"> Stars
+        </label>
+        <label class="checkbox-inline">
+          <input type="checkbox" data-toggle="toggle"> Project Type
+        </label>
+        <button type="submit" class="btn btn-success" (click)="submitStatus()">Submit</button>
       </div>
     </form>
   </div>
 </div>
 
-<div *ngIf="user">
+
+
+<div *ngIf="locationUsers">
+
   <!-- user info panel -->
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">{{ user.name }}</h3> </div>
-    <div class="panel-body">
-      <div class="row">
-        <div class="col-md-4"> <img class="img-thumbnail" src="{{ user.avatar_url }}"> <a class="btn btn-default btn-block" href="{{user.html_url}}" target="_blank">View Profile</a> </div>
-        <div class="col-md-6">
-          <div class="stats"> <span class="label label-default">{{user.public_repos}} Public Repos</span> <span class="label label-primary">{{user.public_gists}} Public Gists</span> <span class="label label-success">{{user.followers}} Followers</span> <span class="label label-info">{{user.following}} Following</span> </div>
-          <br>
+
+  <div *ngFor="let personUser of locationUsers">
+
+      <div class="row well">
+
+        <div class="col-md-3">
+          <a href="{{personUser.html_url}}" class="thumbnail">
+            <img src="{{ personUser.avatar_url }}" alt="...">
+          </a>
+        </div>
+        <div class="col-md-9">
           <ul class="list-group">
-            <li class="list-group-item"><b>UserName: </b>{{user.login}}</li>
-            <li class="list-group-item"><b>Location: </b>{{user.location}}</li>
-            <li class="list-group-item"><b>Email: </b>{{user.email}}</li>
-            <li class="list-group-item"><b>Blog: </b>{{user.blog}}</li>
-            <li class="list-group-item"><b>Member Since: </b>{{user.created_at}}</li>
+            <li class="list-group-item"><b>UserName: </b>{{personUser.login}}</li>
+          </ul>
+        </div>
+
+        <div class="col-md-12">
+          <ul class="list-group">
+            <li class="list-group-item"><b>Location: </b>{{personUser.location}}</li>
+            <li class="list-group-item"><b>Email: </b>{{personUser.email}}</li>
+            <li class="list-group-item"><b>Blog: </b>{{personUser.blog}}</li>
+            <li class="list-group-item"><b>Member Since: </b>{{personUser.created_at}}</li>
           </ul>
         </div>
       </div>
-    </div>
+
   </div>
-  <!-- repor panel -->
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Public Repos</h3>
-    </div>
-    <div class="panel-body">
-      <div *ngFor="let repo of repos">
-        <div class="row">
-          <div class="col-md-9">
-            <h4><a href="{{repo.html_url}}" target="_blank">{{repo.name}}</a></h4>
-            <p>{{repo.description}}</p>
-          </div>
-          <div class="col-md-3">
-            <span class="label label-default">{{repo.watchers}} Watchers</span>
-            <span class="label label-primary">{{repo.forks}} Forks</span>
-          </div>
-        </div>
-        <hr>
-      </div>
-          
-    
-    
-    
-    
-    
-    </div>
-  </div>
+
 </div>
