--- a/app/components/profile.component.html
+++ b/app/components/profile.component.html
@@ -53,6 +53,8 @@
             <li class="list-group-item"><b>Email: </b>{{personUser.email}}</li>
             <li class="list-group-item"><b>Blog: </b>{{personUser.blog}}</li>
             <li class="list-group-item"><b>Member Since: </b>{{personUser.created_at}}</li>
+            <li class="list-group-item"><b>Company: </b>{{personUser.company}}</li>
+
           </ul>
         </div>
       </div>
