enable search on button click only

--- a/app/components/profile.component.html
+++ b/app/components/profile.component.html
@@ -20,10 +20,10 @@
       
         <div class="row">
           <div class="col-md-6">
-            <input type="text" class="form-control" placeholder="Enter GitHub Username" [(ngModel)]="username" name="username" (keyup)="searchUser()">
+            <input type="text" class="form-control" placeholder="Enter GitHub Username" [(ngModel)]="username" name="username">
           </div>
           <div class="col-md-6">
-            <button type="submit" class="btn btn-success" (click)="submitStatus()">Submit</button>
+            <button type="submit" class="btn btn-success" (click)="searchUser()">Submit</button>
           </div>
         </div>
       </div>
