--- a/app/components/profile.component.html
+++ b/app/components/profile.component.html
@@ -5,7 +5,10 @@
         <div class="form-group">
          
         <label class="checkbox-inline">
-          <input type="checkbox" data-toggle="toggle"> Location
+          <input [(ngModel)]="locationChecked" name="location" type="checkbox" data-toggle="toggle"> Location
+        </label>
+        <label class="checkbox-inline">
+          <input [(ngModel)]="hireableChecked" name="hireable" type="checkbox" data-toggle="toggle"> Hireable
         </label>
         <label class="checkbox-inline">
           <input type="checkbox" data-toggle="toggle"> Stars
@@ -54,11 +57,13 @@
             <li class="list-group-item"><b>Blog: </b>{{personUser.blog}}</li>
             <li class="list-group-item"><b>Member Since: </b>{{personUser.created_at}}</li>
             <li class="list-group-item"><b>Company: </b>{{personUser.company}}</li>
+            <li class="list-group-item"><b>Hireable: </b>{{personUser.hireable}}</li>
 
           </ul>
         </div>
       </div>
 
   </div>
+  
 
 </div>
